--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                     </select>
                     <input type="submit" name="" id="" value="Get Weather">
                 </form>
+                <div class="prueba">
+
+                </div>
             </section>
         </main>
     </body>
