Corregsion de interfaz

--- a/index.html
+++ b/index.html
@@ -9,20 +9,10 @@
     <body>
         <main id="wrap-main">
                     <section class="current-weather"></section>
-                    <section class="weather">
+                    <section class="inputSearch">
                         <form action="" method="POST">
                             <input type="text" name="city" id="city" placeholder="Ciudad" autocomplete="off">
-                            <select name="" id="country">
-                                <option disabled selected value="">Select the Country</option>
-                                <option value="AR">Argentina</option>
-                                <option value="CO">Colombia</option>
-                                <option value="CR">Costa Rica</option>
-                                <option value="ES">Espana</option>
-                                <option value="US">Estados Unidos</option>
-                                <option value="MX">México</option>
-                                <option value="PE">Perú</option>
-                            </select>
-                            <input type="submit" name="" id="" value="Get Weather">
+                            <input type="submit" name="" id="submit" value="">
                         </form>
                     </section>
                     <section id="weather-time-wrap">
