Se definiio la paleta de colores y se agrego clima por dias

--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
     </head>
     <body>
         <main id="wrap-main">
-                    <section class="current-weather"></section>
                     <section class="inputSearch">
                         <form action="" method="POST">
                             <input type="text" name="city" id="city" placeholder="Ciudad" autocomplete="off">
                             <input type="submit" name="" id="submit" value="">
                         </form>
                     </section>
+                    <section class="current-weather"></section>
                     <section id="weather-time-wrap">
                         <section class="weather-time"></section>
                     </section>
+                    <section id="section-daily-weather"></section>
                     <section class="box-style" id="section-feels-like"></section>
                     <section class="box-style" id="section-humidity"></section>
                     <section class="box-style" id="section-wind-speed"></section>
+                    <section class="box-style" id="section-visibility"></section>   
                     <section class="box-style" id="section-sunset"></section>     
         </main>
     </body>
