Se agregaron animacion en todos los recuadros

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
                         </form>
                     </section>
                     <section class="current-weather"></section>
-                    <section id="weather-time-wrap">
-                        <section class="weather-time"></section>
-                    </section>
+                    <section id="weather-time-wrap"></section>
                     <section id="section-daily-weather"></section>
                     <section class="box-style" id="section-feels-like"></section>
                     <section class="box-style" id="section-humidity"></section>
