Se agrego el logo y boton de github, modifico alerta de error

--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
         <main id="wrap-main">
                     <section class="inputSearch">
                         <form action="" method="POST">
-                            <input type="text" name="city" id="city" placeholder="Ciudad" autocomplete="off">
+                            <input type="text" name="city" id="input-text" placeholder="Ciudad" autocomplete="off">
                             <input type="submit" name="" id="submit" value="">
                         </form>
+                    </section>
+                    <section id="logo-btn-div">          
+                            <h1>El clima hoy</h1>
+                            <div></div>
+                            <button id="git-hub-btn"><img src="./brand-github-white.svg" width=28 height=28></button>
                     </section>
                     <section class="current-weather"></section>
                     <section id="weather-time-wrap"></section>
