Aplicacion terminada, se agrego un doc config para guardar las api keys

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="./styles.css">
-        <script src="./script.js" defer></script>
+        <meta  name="viewport" content="width=device-width, user-scalable=1.0">
+        <script type="module" src="./script.js" defer></script>
         <title>Inicio</title>
     </head>
     <body>
@@ -17,7 +18,7 @@
                     <section id="logo-btn-div">          
                             <h1>El clima hoy</h1>
                             <div></div>
-                            <button id="git-hub-btn"><img src="./brand-github-white.svg" width=28 height=28></button>
+                            <button id="git-hub-btn"><img src="./assets/brand-github-white.svg" width=28 height=28></button>
                     </section>
                     <section class="current-weather"></section>
                     <section id="weather-time-wrap"></section>
