Correccion de variables de entorno

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="./styles.css">
         <meta  name="viewport" content="width=device-width, user-scalable=1.0">
         <script type="module" src="./script.js" defer></script>
-        <title>Inicio</title>
+        <title>El Clima Hoy</title>
     </head>
     <body>
         <main id="wrap-main">
